# CAPL_Parser

./: 404.html  CHANGELOG.md  GEMINI.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
Usage_Examples/: index.html
docs/: Usage_Examples.md
reference/cli/: index.html
reference/processor/: index.html
search/: search_index.json
src/capl_tools_lib/: api.py  cli.py  common.py  core.py  editor.py  elements.py  file_manager.py  processor.py  scanner.py
tests/: demo_logging.py  dev_code.py  dev_group_scanning.py  dev_logging.py  test_advanced_insert.py  test_editor.py  test_file_manager.py  test_fuzzing.py  test_group_scanning.py  test_insert.py  test_processor.py  test_scanner.py
tests/data/: sample.can
