[project]
name = "capl-tools-lib" # PyPI distribution name (hyphens)
version = "0.1.0"
description = "A parser for CAPL files."
readme = "README.md"
authors = [
    { name = "Mohamed Hamed Othman", email = "mohamedahamed1915@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]   