[project]
name = "capl-tools-lib" # PyPI distribution name (hyphens)
version = "0.1.0"
description = "A parser for CAPL files."
readme = "README.md"
authors = [
    { name = "Mohamed Hamed Othman", email = "mohamedahamed1915@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0", # Added Typer for CLI
    "rich>=13.0.0",       # Optional: for beautiful CLI output
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project.scripts]
capl-tools = "capl_tools_lib.api:main" # This creates the 'capl-tools' command

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]   